Ensure the focus is visible when placed on the button to open a select #69404

--- a/packages/forms/src/elements/select/select.module.scss
+++ b/packages/forms/src/elements/select/select.module.scss
@@ -45,6 +45,11 @@
 	outline: none;
 }
 
+.iconButton:focus {
+	border: 4px solid $colors-neutral-7;
+	box-shadow: 0 0 0 3px $colors-warning-1;
+}
+
 .iconButton:disabled {
 	cursor: not-allowed;
 }
